--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,31 @@
-Flask
-Flask-RESTful
-Pymongo
-flask_pymongo
-uwsgi
-datetime
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+aniso8601==8.0.0
+antiorm==1.2.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+db==0.1.1
+db.py==0.5.3
+Flask==1.1.2
+flask-mongoengine==0.9.5
+Flask-PyMongo==2.3.0
+Flask-RESTful==0.3.8
+Flask-WTF==0.14.3
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+mongoengine==0.20.0
+numpy==1.19.1
+pandas==1.1.1
+prettytable==0.7.2
+pybars3==0.9.7
+PyMeta3==0.5.1
+pymongo==3.11.0
+python-dateutil==2.8.1
+pytz==2020.1
+requests==2.24.0
+six==1.15.0
+urllib3==1.25.10
+uWSGI==2.0.19.1
+Werkzeug==1.0.1
+WTForms==2.3.3
